--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>io.gravitee</groupId>
         <artifactId>gravitee-parent</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>2</version>
     </parent>
     
     <artifactId>gravitee-gateway</artifactId>
@@ -72,6 +72,6 @@
 
     <properties>
         <jackson.version>2.5.3</jackson.version>
-        <gravitee-definition.version>0.1.0-SNAPSHOT</gravitee-definition.version>
+        <gravitee-definition.version>0.1.0</gravitee-definition.version>
     </properties>
 </project>
