--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,8 @@
         <artifactId>gravitee-parent</artifactId>
         <version>2</version>
     </parent>
-    
+
+    <groupId>io.gravitee.gateway</groupId>
     <artifactId>gravitee-gateway</artifactId>
     <version>0.1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
