--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 	<parent>
 		<groupId>io.gravitee</groupId>
 		<artifactId>gravitee-parent</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
+		<version>2</version>
 	</parent>
 
 	<groupId>io.gravitee.reporter</groupId>
@@ -35,8 +35,8 @@
 
 	<properties>
 		<!-- Gravitee's project versions -->
-		<gravitee-gateway-api.version>0.1.0-SNAPSHOT</gravitee-gateway-api.version>
-		<gravitee-common.version>0.1.0-SNAPSHOT</gravitee-common.version>
+		<gravitee-gateway-api.version>0.1.0</gravitee-gateway-api.version>
+		<gravitee-common.version>0.1.0</gravitee-common.version>
 
 		<!-- External project versions -->
 		<!--
