--- a/gravitee-management-api-standalone/gravitee-management-api-standalone-distribution/pom.xml
+++ b/gravitee-management-api-standalone/gravitee-management-api-standalone-distribution/pom.xml
@@ -87,7 +87,7 @@
 		</plugins>
 	</build>
 	<modules>
-		<module>zip</module>
+		<module>gravitee-management-api-standalone-distribution-zip</module>
 	</modules>
 
 	<profiles>
@@ -104,7 +104,7 @@
 				</file>
 			</activation>
 			<modules>
-				<module>rpm</module>
+				<module>gravitee-management-api-standalone-distribution-rpm</module>
 			</modules>
 		</profile>
 
@@ -118,7 +118,7 @@
 				</file>
 			</activation>
 			<modules>
-				<module>rpm</module>
+				<module>gravitee-management-api-standalone-distribution-rpm</module>
 			</modules>
 		</profile>
 	</profiles>
