--- a/gravitee-management-api-service/pom.xml
+++ b/gravitee-management-api-service/pom.xml
@@ -33,8 +33,8 @@
 	<description>Gravitee IO Manager Service</description>
 
 	<properties>
-		<gravitee-plugin-core.version>0.1.0-SNAPSHOT</gravitee-plugin-core.version>
-		<gravitee-repository.version>0.1.0-SNAPSHOT</gravitee-repository.version>
+		<gravitee-plugin-core.version>0.1.0</gravitee-plugin-core.version>
+		<gravitee-repository.version>0.1.0</gravitee-repository.version>
 	</properties>
 
 	<dependencies>
