refactor: removing async part since it's now handle directly by the gateway

--- a/src/main/resources/plugin.properties
+++ b/src/main/resources/plugin.properties
@@ -1,6 +1,6 @@
-id=${project.artifactId}
+id=file
 name=${project.name}
 version=${project.version}
 description=${project.description}
-class=io.gravitee.reporter.file.AsyncFileReporter
+class=io.gravitee.reporter.file.FileReporter
 type=reporter
