--- a/gravitee-gateway-core/pom.xml
+++ b/gravitee-gateway-core/pom.xml
@@ -29,7 +29,7 @@
 
 
     <artifactId>gravitee-gateway-core</artifactId>
-    <name>Gravitee IO - API Management - Gateway Core</name>
+    <name>Gravitee IO - Gateway Core</name>
 
     <properties>
         <gravitee-common.version>0.1.0</gravitee-common.version>
@@ -55,6 +55,12 @@
         <dependency>
             <groupId>io.gravitee.gateway</groupId>
             <artifactId>gravitee-gateway-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.gravitee.gateway.http</groupId>
+            <artifactId>gravitee-gateway-http-client-vertx</artifactId>
             <version>${project.version}</version>
         </dependency>
 
@@ -88,13 +94,6 @@
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-core</artifactId>
-        </dependency>
-
-        <!-- Vertx.io HTTP client -->
-        <dependency>
-            <groupId>io.vertx</groupId>
-            <artifactId>vertx-core</artifactId>
-            <version>3.1.0</version>
         </dependency>
 
         <!-- Jackson dependencies -->
@@ -171,6 +170,13 @@
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>2.4</version>
+            <scope>test</scope>
+        </dependency>
+        <!-- Vertx.io HTTP client -->
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-core</artifactId>
+            <version>3.1.0</version>
             <scope>test</scope>
         </dependency>
 
