--- a/pom.xml
+++ b/pom.xml
@@ -31,12 +31,13 @@
     <artifactId>gravitee-gateway</artifactId>
     <version>0.2.0-SNAPSHOT</version>
     <packaging>pom</packaging>
-    <name>Gravitee IO - Gateway Parent</name>
+    <name>Gravitee IO - Gateway</name>
 
     <modules>
         <module>gravitee-gateway-api</module>
         <module>gravitee-gateway-core</module>
         <module>gravitee-gateway-http-client</module>
+        <module>gravitee-gateway-standalone</module>
     </modules>
 
     <dependencyManagement>
