chore(): replace values in bower.json and package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "gravitee",
   "version": "0.0.0",
+  "description": "",
   "dependencies": {},
   "scripts": {
     "test": "gulp test"
