--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,7 @@
 {
   "name": "gravitee",
   "version": "0.0.0",
+  "description": "",
   "dependencies": {
     "angular-ui-router": "~0.2.15",
     "angular-material": "~0.9.7",
