--- a/pom.xml
+++ b/pom.xml
@@ -24,12 +24,12 @@
     <parent>
         <groupId>io.gravitee</groupId>
         <artifactId>gravitee-parent</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>2</version>
     </parent>
 
     <groupId>io.gravitee.management</groupId>
     <artifactId>gravitee-management-webui</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>0.1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>Gravitee IO - API Management - Admin - Web Console</name>
 
@@ -84,6 +84,40 @@
                         <goals>
                             <goal>single</goal>
                         </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <!--Plugin used to replace version on several files -->
+            <plugin>
+                <groupId>com.google.code.maven-replacer-plugin</groupId>
+                <artifactId>replacer</artifactId>
+                <version>1.5.3</version>
+                <executions>
+                    <execution>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>replace</goal>
+                        </goals>
+                        <configuration>
+                            <includes>
+                                <include>${project.basedir}/bower.json</include>
+                                <include>${project.basedir}/package.json</include>
+                            </includes>
+                            <replacements>
+                                <replacement>
+                                    <token>"name"(\s*):(\s*)"(.*)"</token>
+                                    <value>"name": "${project.artifactId}"</value>
+                                </replacement>
+                                <replacement>
+                                    <token>"version": "(.*)"</token>
+                                    <value>"version": "${project.version}"</value>
+                                </replacement>
+                                <replacement>
+                                    <token>"description"(\s*):(\s*)"(.*)"</token>
+                                    <value>"description": "${project.name}"</value>
+                                </replacement>
+                            </replacements>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
