--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gravitee",
-  "version": "0.0.0",
-  "description": "",
+  "name": "gravitee-management-webui",
+  "version": "0.1.0",
+  "description": "Gravitee IO - API Management - Admin - Web Console",
   "dependencies": {},
   "scripts": {
     "test": "gulp test"
