chore(): fix release bugs in pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -35,8 +35,8 @@
 
 	<properties>
 		<!-- Gravitee's project versions -->
-		<gravitee-gateway-api.version>0.2.0-SNAPSHOT</gravitee-gateway-api.version>
-		<gravitee-common.version>0.1.0</gravitee-common.version>
+		<gravitee-gateway-api.version>0.2.0</gravitee-gateway-api.version>
+		<gravitee-common.version>0.2.0</gravitee-common.version>
 
 		<!-- External project versions -->
 		<jetty.version>9.2.11.v20150529</jetty.version>
