--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
 	<artifactId>gravitee-management-api</artifactId>
 	<packaging>pom</packaging>
 
-	<version>0.2.0-SNAPSHOT</version>
+	<version>0.2.0</version>
 	<name>Gravitee IO - Management</name>
 
 	<modules>
