--- a/gravitee-management-api-standalone/gravitee-management-api-standalone-container/pom.xml
+++ b/gravitee-management-api-standalone/gravitee-management-api-standalone-container/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>io.gravitee.management.standalone</groupId>
         <artifactId>gravitee-management-api-standalone</artifactId>
-        <version>0.2.0</version>
+        <version>0.3.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>gravitee-management-api-standalone-container</artifactId>
