--- a/gravitee-management-api-standalone/gravitee-management-api-standalone-distribution/src/main/resources/config/gravitee.yml
+++ b/gravitee-management-api-standalone/gravitee-management-api-standalone-distribution/src/main/resources/config/gravitee.yml
@@ -12,40 +12,40 @@ management:
     host: localhost
     port: 27017
 
+analytics:
+  type: elasticsearch
+  elasticsearch:
+    host: localhost
+    port: 9300
+
 security:
   type: basic-auth
-  authentication-manager:
-    authentication-providers:
-      size: 3
-      authentication-provider-1:
-        type: ldap
-        embedded: true
-        role-mapping: true
-        # if role-mapping is true set the following role mapper LDAP values
-        role-mapper: {
-                ROLE_DEVELOPERS: ROLE_USER,
-                ROLE_MEMBERS: ROLE_USER,
-                ROLE_OWNERS: ROLE_ADMIN
-               }
-        user-dn-patterns: uid={0},ou=people
-        group-search-base: ou=groups
-        context-source-base: dc=gravitee,dc=io
-        # if embedded is false set the following values 
-        # context-source-username: test
-        # context-source-password: test
-        # context-source-url: ldap://localhost:389/dc=gravitee,dc=io
-      authentication-provider-2:
-        type: memory
-        users:
-          size: 2
-          user-1:
-            username: user
-            password: password
-            roles: USER
-          user-2:
-            username: admin
-            password: admin
-            roles: ADMIN
-      authentication-provider-3:
-        type: gravitee
-        password-encoding: true
+  providers:
+    - type: ldap
+      embedded: true
+      role-mapping: true
+      # if role-mapping is true set the following role mapper LDAP values
+      role-mapper: {
+        ROLE_DEVELOPERS: ROLE_USER,
+        ROLE_MEMBERS: ROLE_USER,
+        ROLE_OWNERS: ROLE_ADMIN
+      }
+      user-dn-patterns: uid={0},ou=people
+      group-search-base: ou=groups
+      context-source-base: dc=gravitee,dc=io
+      # if embedded is false set the following values
+      # context-source-username: test
+      # context-source-password: test
+      # context-source-url: ldap://localhost:389/dc=gravitee,dc=io
+    - type: memory
+      users:
+        - user:
+          username: user
+          password: password
+          roles: USER
+        - user:
+          username: admin
+          password: admin
+          roles: ADMIN
+    - type: gravitee
+      password-encoding: true
