--- a/pom.xml
+++ b/pom.xml
@@ -38,8 +38,9 @@
 		<gravitee-definition.version>0.2.0</gravitee-definition.version>
 		<gravitee-plugin-core.version>0.2.0</gravitee-plugin-core.version>
 		<gravitee-repository.version>0.3.0-SNAPSHOT</gravitee-repository.version>
-		<gravitee-repository-mongodb.version>0.2.0</gravitee-repository-mongodb.version>
-		<gravitee-repository-jpa.version>0.2.0</gravitee-repository-jpa.version>
+		<gravitee-repository-elasticsearch.version>0.3.0-SNAPSHOT</gravitee-repository-elasticsearch.version>
+		<gravitee-repository-mongodb.version>0.3.0-SNAPSHOT</gravitee-repository-mongodb.version>
+		<gravitee-repository-jpa.version>0.3.0-SNAPSHOT</gravitee-repository-jpa.version>
 
 		<apacheds-server-jndi.version>1.5.5</apacheds-server-jndi.version>
 		<jackson.version>2.5.3</jackson.version>
