--- a/gravitee-management-api-standalone/gravitee-management-api-standalone-container/pom.xml
+++ b/gravitee-management-api-standalone/gravitee-management-api-standalone-container/pom.xml
@@ -60,8 +60,13 @@
         </dependency>
         <dependency>
             <groupId>io.gravitee.repository</groupId>
-            <artifactId>gravitee-repository-jpa</artifactId>
-            <version>${gravitee-repository-jpa.version}</version>
+            <artifactId>gravitee-repository-jdbc</artifactId>
+            <version>${gravitee-repository-jdbc.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.gravitee.repository</groupId>
+            <artifactId>gravitee-repository-elasticsearch</artifactId>
+            <version>${gravitee-repository-elasticsearch.version}</version>
         </dependency>
 
         <!-- Jetty -->
