--- a/gravitee-management-api-war/pom.xml
+++ b/gravitee-management-api-war/pom.xml
@@ -67,8 +67,8 @@
 		</dependency>
 		<dependency>
 			<groupId>io.gravitee.repository</groupId>
-			<artifactId>gravitee-repository-jpa</artifactId>
-			<version>${gravitee-repository-jpa.version}</version>
+			<artifactId>gravitee-repository-jdbc</artifactId>
+			<version>${gravitee-repository-jdbc.version}</version>
 		</dependency>
 	</dependencies>
 	
