--- a/gravitee-gateway-standalone/gravitee-gateway-standalone-container/src/test/resources/gravitee-01/config/gravitee.yml
+++ b/gravitee-gateway-standalone/gravitee-gateway-standalone-container/src/test/resources/gravitee-01/config/gravitee.yml
@@ -1,10 +1,6 @@
 
-node:
-  home: ${gravitee.home}
-
 plugins:
-  registry:
-    path: ${node.home}/plugins
+    path: ${gravitee.home}/plugins
 
 management:
   type: mock
