--- a/gravitee-gateway-http-client/gravitee-gateway-http-client-vertx/pom.xml
+++ b/gravitee-gateway-http-client/gravitee-gateway-http-client-vertx/pom.xml
@@ -35,7 +35,7 @@
         <dependency>
             <groupId>io.vertx</groupId>
             <artifactId>vertx-core</artifactId>
-            <version>3.1.0</version>
+            <version>${vertx.version}</version>
         </dependency>
     </dependencies>
 </project>
