--- a/pom.xml
+++ b/pom.xml
@@ -72,12 +72,20 @@
     </dependencies>
 
     <properties>
-        <jackson.version>2.5.3</jackson.version>
         <gravitee-definition.version>0.2.0</gravitee-definition.version>
         <gravitee-common.version>0.2.0</gravitee-common.version>
         <gravitee-repository.version>0.3.0-SNAPSHOT</gravitee-repository.version>
         <gravitee-plugin-core.version>0.3.0-SNAPSHOT</gravitee-plugin-core.version>
         <gravitee-repository-jdbc.version>0.3.0-SNAPSHOT</gravitee-repository-jdbc.version>
         <gravitee-repository-mongodb.version>0.3.0-SNAPSHOT</gravitee-repository-mongodb.version>
+
+        <jackson.version>2.5.3</jackson.version>
+        <vertx.version>3.1.0</vertx.version>
+        <jetty.version>9.3.3.v20150827</jetty.version>
+        <httpclient.version>4.5</httpclient.version>
+        <reflections.version>0.9.10</reflections.version>
+        <snakeyaml.version>1.16</snakeyaml.version>
+        <commons-io.version>2.4</commons-io.version>
+        <commons-validator.version>1.4.1</commons-validator.version>
     </properties>
 </project>
