--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
 
 	<properties>
 		<gravitee-common.version>0.2.0</gravitee-common.version>
-		<gravitee-definition.version>0.2.0</gravitee-definition.version>
+		<gravitee-definition.version>0.3.0-SNAPSHOT</gravitee-definition.version>
 		<gravitee-plugin-core.version>0.2.0</gravitee-plugin-core.version>
 		<gravitee-repository.version>0.3.0-SNAPSHOT</gravitee-repository.version>
 		<gravitee-repository-elasticsearch.version>0.3.0-SNAPSHOT</gravitee-repository-elasticsearch.version>
