--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "jquery": "~2.1.4",
     "bootstrap-sass": "3.3.5",
     "angular-chart.js": "~0.8.5",
-    "angular-ui-codemirror": "~0.3.0"
+    "angular-ui-codemirror": "~0.3.0",
+    "angular-material-data-table": "~0.8.14"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0"
