--- a/model/pom.xml
+++ b/model/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>io.gravitee.definition</groupId>
         <artifactId>gravitee-definition</artifactId>
-        <version>0.3.0</version>
+        <version>0.4.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>gravitee-definition-model</artifactId>
