feat(services): Add service plugins management and provide initial implementation for repository_sync and local_registry

--- a/gravitee-gateway-standalone/gravitee-gateway-standalone-distribution/pom.xml
+++ b/gravitee-gateway-standalone/gravitee-gateway-standalone-distribution/pom.xml
@@ -63,6 +63,20 @@
             <artifactId>gravitee-gateway-standalone-container</artifactId>
             <version>${project.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>io.gravitee.gateway.services</groupId>
+            <artifactId>gravitee-gateway-services-monitoring</artifactId>
+            <version>${project.version}</version>
+            <type>zip</type>
+        </dependency>
+
+        <dependency>
+            <groupId>io.gravitee.gateway.services</groupId>
+            <artifactId>gravitee-gateway-services-sync</artifactId>
+            <version>${project.version}</version>
+            <type>zip</type>
+        </dependency>
     </dependencies>
     
 	<build>
