--- a/gravitee-gateway-standalone/gravitee-gateway-standalone-distribution/src/main/resources/config/gravitee.yml
+++ b/gravitee-gateway-standalone/gravitee-gateway-standalone-distribution/src/main/resources/config/gravitee.yml
@@ -5,6 +5,9 @@ management:
     dbname: gravitee
     host: localhost
     port: 27017
-  
-sync:
-  cron: '*/5 * * * * *'
+repositories:
+
+services:
+  sync:
+    enabled: true
+    cron: '*/5 * * * * *'
