chore: Move all gravitee.io dependencies into the dependencyManagement section of the gateway root pom. Only gravitee.io management project dependencies are kept as is

--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,59 @@
 		<module>gravitee-management-api-security</module>
 	</modules>
 
+	<dependencyManagement>
+		<dependencies>
+			<!-- Gravitee.io -->
+			<dependency>
+				<groupId>io.gravitee.repository</groupId>
+				<artifactId>gravitee-repository</artifactId>
+				<version>${gravitee-repository.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>io.gravitee.common</groupId>
+				<artifactId>gravitee-common</artifactId>
+				<version>${gravitee-common.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>io.gravitee.definition</groupId>
+				<artifactId>gravitee-definition-jackson</artifactId>
+				<version>${gravitee-definition.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>io.gravitee.definition</groupId>
+				<artifactId>gravitee-definition-model</artifactId>
+				<version>${gravitee-definition.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>io.gravitee.repository</groupId>
+				<artifactId>gravitee-repository-mongodb</artifactId>
+				<version>${gravitee-repository-mongodb.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>io.gravitee.repository</groupId>
+				<artifactId>gravitee-repository-jdbc</artifactId>
+				<version>${gravitee-repository-jdbc.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>io.gravitee.repository</groupId>
+				<artifactId>gravitee-repository-elasticsearch</artifactId>
+				<version>${gravitee-repository-elasticsearch.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>io.gravitee.plugin</groupId>
+				<artifactId>gravitee-plugin-core</artifactId>
+				<version>${gravitee-plugin-core.version}</version>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+
 	<dependencies>
 		<dependency>
 			<groupId>javax.servlet</groupId>
@@ -70,7 +123,6 @@
 		<dependency>
 			<groupId>io.gravitee.common</groupId>
 			<artifactId>gravitee-common</artifactId>
-			<version>${gravitee-common.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
