--- a/gravitee-gateway-standalone/gravitee-gateway-standalone-distribution/rpm/pom.xml
+++ b/gravitee-gateway-standalone/gravitee-gateway-standalone-distribution/rpm/pom.xml
@@ -23,7 +23,7 @@
 	<parent>
 		<groupId>io.gravitee.gateway.standalone</groupId>
 		<artifactId>gravitee-gateway-standalone-distribution</artifactId>
-		<version>0.3.0-SNAPSHOT</version>
+		<version>0.3.0</version>
 	</parent>
 
 	<artifactId>gravitee-gateway-standalone-distribution-rpm</artifactId>
