--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
 
     <groupId>io.gravitee.gateway</groupId>
     <artifactId>gravitee-gateway</artifactId>
-    <version>0.3.0-SNAPSHOT</version>
+    <version>0.3.0</version>
     <packaging>pom</packaging>
     <name>Gravitee IO - Gateway</name>
 
@@ -121,12 +121,12 @@
     </dependencies>
 
     <properties>
-        <gravitee-definition.version>0.3.0-SNAPSHOT</gravitee-definition.version>
+        <gravitee-definition.version>0.3.0</gravitee-definition.version>
         <gravitee-common.version>0.2.0</gravitee-common.version>
-        <gravitee-repository.version>0.3.0-SNAPSHOT</gravitee-repository.version>
-        <gravitee-plugin-core.version>0.3.0-SNAPSHOT</gravitee-plugin-core.version>
-        <gravitee-repository-jdbc.version>0.3.0-SNAPSHOT</gravitee-repository-jdbc.version>
-        <gravitee-repository-mongodb.version>0.3.0-SNAPSHOT</gravitee-repository-mongodb.version>
+        <gravitee-repository.version>0.3.0</gravitee-repository.version>
+        <gravitee-plugin-core.version>0.3.0</gravitee-plugin-core.version>
+        <gravitee-repository-jdbc.version>0.3.0</gravitee-repository-jdbc.version>
+        <gravitee-repository-mongodb.version>0.3.0</gravitee-repository-mongodb.version>
 
         <jackson.version>2.5.3</jackson.version>
         <vertx.version>3.1.0</vertx.version>
