--- a/gravitee-management-api-standalone/gravitee-management-api-standalone-distribution/gravitee-management-api-standalone-distribution-rpm/pom.xml
+++ b/gravitee-management-api-standalone/gravitee-management-api-standalone-distribution/gravitee-management-api-standalone-distribution-rpm/pom.xml
@@ -22,7 +22,7 @@
 	<parent>
 		<groupId>io.gravitee.management.standalone</groupId>
 		<artifactId>gravitee-management-api-standalone-distribution</artifactId>
-		<version>0.3.0-SNAPSHOT</version>
+		<version>0.3.0</version>
 	</parent>
 
 	<artifactId>gravitee-management-api-standalone-distribution-rpm</artifactId>
