--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,8 @@
     "angular-material-data-table": "~0.8.14"
   },
   "devDependencies": {
-    "angular-mocks": "~1.4.0"
+    "angular-mocks": "~1.4.0",
+    "highcharts-ng": "~0.0.11"
   },
   "resolutions": {
     "angular": "1.4.7"
