--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "gravitee-management-webui",
-  "version": "0.3.0",
+  "version": "0.4.0-SNAPSHOT",
   "description": "Gravitee IO - API Management - Admin - Web Console",
   "dependencies": {
     "angular-ui-router": "~0.2.15",
@@ -12,17 +12,15 @@
     "angular-drag-and-drop-lists": "~1.2.0",
     "angular-markdown-directive": "~0.3.1",
     "angular-swagger-ui": "~0.2.3",
+    "angular-cookies": "~1.4.0",
     "jquery": "~2.1.4",
     "bootstrap-sass": "3.3.5",
-    "angular-chart.js": "~0.8.5",
     "angular-ui-codemirror": "~0.3.0",
-    "angular-material-data-table": "~0.8.14"
-  },
-  "devDependencies": {
-    "angular-mocks": "~1.4.0",
+    "angular-material-data-table": "~0.8.14",
+    "highcharts": "~4.1.9",
     "highcharts-ng": "~0.0.11"
   },
-  "resolutions": {
-    "angular": "1.4.7"
+  "devDependencies": {
+    "angular-mocks": "~1.4.0"
   }
 }
