feat(provider): Multiple implementation of providers for ldap, inmemory and Gravitee repository

--- a/gravitee-management-api-rest/pom.xml
+++ b/gravitee-management-api-rest/pom.xml
@@ -48,6 +48,30 @@
 			<version>${project.version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>io.gravitee.management.providers</groupId>
+			<artifactId>gravitee-management-api-providers-core</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.gravitee.management.providers</groupId>
+			<artifactId>gravitee-management-api-providers-ldap</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.gravitee.management.providers</groupId>
+			<artifactId>gravitee-management-api-providers-memory</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.gravitee.management.providers</groupId>
+			<artifactId>gravitee-management-api-providers-repository</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+
 		<!-- Gravitee dependencies -->
 		<dependency>
 			<groupId>io.gravitee.definition</groupId>
