--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,7 @@
 		<module>gravitee-management-api-war</module>
 		<module>gravitee-management-api-standalone</module>
 		<module>gravitee-management-api-security</module>
+		<module>gravitee-management-api-providers</module>
 	</modules>
 
 	<dependencyManagement>
