--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,7 @@
   "description": "Gravitee IO - API Management - Admin - Web Console",
   "dependencies": {
     "angular-ui-router": "~0.2.15",
-    "angular-material": "~0.11.4",
+    "angular-material": "0.11.3",
     "malarkey": "yuanqing/malarkey#~1.3.0",
     "moment": "~2.10.3",
     "animate.css": "~3.3.0",
