--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
     "angular-material-data-table": "~0.8.14",
     "highcharts": "~4.1.9",
     "highcharts-ng": "~0.0.11",
+    "dragular": "~3.2.0",
     "lodash": "~3.10.1",
     "api-console": "~2.0.4",
     "angular-material-icons": "~0.6.0"
