refactor: Move policy plugins management from the gateway to gravitee-plugin-policy to share it with management-api

--- a/gravitee-gateway-core/pom.xml
+++ b/gravitee-gateway-core/pom.xml
@@ -74,6 +74,11 @@
             <artifactId>gravitee-plugin-core</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>io.gravitee.plugin</groupId>
+            <artifactId>gravitee-plugin-policy</artifactId>
+        </dependency>
+
         <!-- Logging -->
         <dependency>
             <groupId>org.slf4j</groupId>
